// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inbox queues the answer, lets the card go and settles on Tokek asleep 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#17142a",
          },
          undefined,
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
      testID="inbox-screen"
    >
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "paddingBottom": 0,
              "paddingTop": 47,
            },
            {
              "transform": [
                {
                  "translateY": 0,
                },
              ],
            },
          ]
        }
      >
        <RCTScrollView
          contentContainerStyle={
            {
              "gap": 16,
              "paddingBottom": 32,
              "paddingHorizontal": 20,
            }
          }
        >
          <View>
            <View
              style={
                [
                  {
                    "flexDirection": "row",
                    "flexWrap": "nowrap",
                  },
                  {
                    "alignItems": "center",
                    "justifyContent": "space-between",
                  },
                  {
                    "paddingTop": 8,
                  },
                ]
              }
            >
              <Text
                accessibilityRole="header"
                allowFontScaling={false}
                onLayout={[Function]}
                onTextLayout={[Function]}
                style={
                  [
                    {
                      "color": "#f4efe4",
                      "fontFamily": "Archivo-W66-900",
                      "fontSize": 64,
                      "fontStyle": "normal",
                      "letterSpacing": -0.64,
                      "lineHeight": 55.04,
                    },
                    undefined,
                    {
                      "marginTop": -26.175999999999995,
                      "paddingTop": 26.175999999999995,
                    },
                  ]
                }
              >
                INBOX
              </Text>
              <View
                accessibilityActions={
                  [
                    {
                      "label": "MARK ALL READ",
                      "name": "activate",
                    },
                  ]
                }
                accessibilityLabel="MARK ALL READ"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                onAccessibilityAction={[Function]}
                style={
                  [
                    {
                      "minHeight": 44,
                      "minWidth": 44,
                    },
                    {
                      "alignItems": "flex-start",
                      "justifyContent": "center",
                    },
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  ]
                }
                testID="inbox-mark-all-read"
              >
                <View
                  style={
                    [
                      {
                        "borderRadius": 16,
                        "justifyContent": "center",
                        "minHeight": 32,
                        "paddingHorizontal": 14,
                      },
                      {
                        "borderColor": "#5b5487",
                        "borderWidth": 1.5,
                      },
                    ]
                  }
                >
                  <Text
                    allowFontScaling={false}
                    onLayout={[Function]}
                    onTextLayout={[Function]}
                    style={
                      [
                        {
                          "color": "#a9a3c0",
                          "fontFamily": "Archivo-W100-800",
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "letterSpacing": 0.84,
                          "lineHeight": 12.04,
                        },
                        undefined,
                        {
                          "marginTop": -5.725999999999999,
                          "paddingTop": 5.725999999999999,
                        },
                      ]
                    }
                  >
                    MARK ALL READ
                  </Text>
                </View>
              </View>
            </View>
            <View
              accessibilityLabel="Show"
              accessibilityRole="radiogroup"
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#2c2750",
                  "borderRadius": 22,
                  "flexDirection": "row",
                  "gap": 4,
                  "padding": 4,
                }
              }
              testID="inbox-filters"
            >
              <View
                accessibilityActions={
                  [
                    {
                      "label": "ALL",
                      "name": "activate",
                    },
                  ]
                }
                accessibilityLabel="ALL"
                accessibilityRole="radio"
                accessibilityState={
                  {
                    "checked": false,
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                onAccessibilityAction={[Function]}
                style={
                  [
                    {
                      "minHeight": 44,
                      "minWidth": 44,
                    },
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 22,
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 4,
                        "justifyContent": "center",
                        "paddingHorizontal": 8,
                      },
                      null,
                    ],
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  onLayout={[Function]}
                  onTextLayout={[Function]}
                  style={
                    [
                      {
                        "color": "#a9a3c0",
                        "fontFamily": "Geist-800",
                        "fontSize": 11,
                        "fontStyle": "normal",
                        "letterSpacing": 0.88,
                        "lineHeight": 15.399999999999999,
                      },
                      undefined,
                      {
                        "marginTop": -0.2970000000000015,
                        "paddingTop": 0.2970000000000015,
                      },
                    ]
                  }
                >
                  ALL
                </Text>
              </View>
              <View
                accessibilityActions={
                  [
                    {
                      "label": "NEEDS YOU · 0",
                      "name": "activate",
                    },
                  ]
                }
                accessibilityLabel="NEEDS YOU · 0"
                accessibilityRole="radio"
                accessibilityState={
                  {
                    "checked": true,
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                onAccessibilityAction={[Function]}
                style={
                  [
                    {
                      "minHeight": 44,
                      "minWidth": 44,
                    },
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 22,
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 4,
                        "justifyContent": "center",
                        "paddingHorizontal": 8,
                      },
                      {
                        "backgroundColor": "#ffd84a",
                      },
                    ],
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  onLayout={[Function]}
                  onTextLayout={[Function]}
                  style={
                    [
                      {
                        "color": "#17142a",
                        "fontFamily": "Geist-800",
                        "fontSize": 11,
                        "fontStyle": "normal",
                        "letterSpacing": 0.88,
                        "lineHeight": 15.399999999999999,
                      },
                      undefined,
                      {
                        "marginTop": -0.2970000000000015,
                        "paddingTop": 0.2970000000000015,
                      },
                    ]
                  }
                >
                  NEEDS YOU · 0
                </Text>
              </View>
              <View
                accessibilityActions={
                  [
                    {
                      "label": "CREW",
                      "name": "activate",
                    },
                  ]
                }
                accessibilityLabel="CREW"
                accessibilityRole="radio"
                accessibilityState={
                  {
                    "checked": false,
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                onAccessibilityAction={[Function]}
                style={
                  [
                    {
                      "minHeight": 44,
                      "minWidth": 44,
                    },
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 22,
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 4,
                        "justifyContent": "center",
                        "paddingHorizontal": 8,
                      },
                      null,
                    ],
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  onLayout={[Function]}
                  onTextLayout={[Function]}
                  style={
                    [
                      {
                        "color": "#a9a3c0",
                        "fontFamily": "Geist-800",
                        "fontSize": 11,
                        "fontStyle": "normal",
                        "letterSpacing": 0.88,
                        "lineHeight": 15.399999999999999,
                      },
                      undefined,
                      {
                        "marginTop": -0.2970000000000015,
                        "paddingTop": 0.2970000000000015,
                      },
                    ]
                  }
                >
                  CREW
                </Text>
              </View>
              <View
                accessibilityActions={
                  [
                    {
                      "label": "GUIDES",
                      "name": "activate",
                    },
                  ]
                }
                accessibilityLabel="GUIDES"
                accessibilityRole="radio"
                accessibilityState={
                  {
                    "checked": false,
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                onAccessibilityAction={[Function]}
                style={
                  [
                    {
                      "minHeight": 44,
                      "minWidth": 44,
                    },
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 22,
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 4,
                        "justifyContent": "center",
                        "paddingHorizontal": 8,
                      },
                      null,
                    ],
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  onLayout={[Function]}
                  onTextLayout={[Function]}
                  style={
                    [
                      {
                        "color": "#a9a3c0",
                        "fontFamily": "Geist-800",
                        "fontSize": 11,
                        "fontStyle": "normal",
                        "letterSpacing": 0.88,
                        "lineHeight": 15.399999999999999,
                      },
                      undefined,
                      {
                        "marginTop": -0.2970000000000015,
                        "paddingTop": 0.2970000000000015,
                      },
                    ]
                  }
                >
                  GUIDES
                </Text>
              </View>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "gap": 12,
                  "paddingVertical": 24,
                }
              }
              testID="inbox-caught-up"
            >
              <View
                accessibilityLabel="Tokek, asleep"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                testID="inbox-tokek"
              >
                <View
                  style={
                    [
                      {
                        "opacity": 1,
                        "transform": [
                          {
                            "translateX": 0,
                          },
                          {
                            "translateY": 0,
                          },
                          {
                            "rotate": "0deg",
                          },
                          {
                            "scaleX": 1,
                          },
                          {
                            "scaleY": 1,
                          },
                        ],
                      },
                      {
                        "transform": [
                          {
                            "translateY": 0,
                          },
                        ],
                      },
                    ]
                  }
                >
                  <View
                    accessibilityLabel="Tokek"
                    style={
                      {
                        "height": 150,
                        "width": 150,
                      }
                    }
                  />
                </View>
                <View
                  pointerEvents="none"
                  style={
                    [
                      {
                        "end": -12,
                        "position": "absolute",
                        "top": 0,
                      },
                      {
                        "opacity": 1,
                        "transform": [
                          {
                            "translateX": 0,
                          },
                          {
                            "translateY": 0,
                          },
                          {
                            "rotate": "-2deg",
                          },
                          {
                            "scaleX": 1,
                          },
                          {
                            "scaleY": 1,
                          },
                        ],
                      },
                    ]
                  }
                >
                  <Text
                    allowFontScaling={false}
                    onLayout={[Function]}
                    onTextLayout={[Function]}
                    style={
                      [
                        {
                          "color": "#a9a3c0",
                          "fontFamily": "Caveat-600",
                          "fontSize": 20,
                          "fontStyle": "normal",
                          "letterSpacing": 0,
                          "lineHeight": 22,
                        },
                        undefined,
                        {
                          "marginTop": -1.7999999999999994,
                          "paddingTop": 1.7999999999999994,
                        },
                      ]
                    }
                  >
                    z z
                  </Text>
                </View>
              </View>
              <Text
                accessibilityRole="header"
                allowFontScaling={false}
                onLayout={[Function]}
                onTextLayout={[Function]}
                style={
                  [
                    {
                      "color": "#f4efe4",
                      "fontFamily": "Archivo-W70-900",
                      "fontSize": 44,
                      "fontStyle": "normal",
                      "letterSpacing": -0.44,
                      "lineHeight": 37.839999999999996,
                    },
                    undefined,
                    {
                      "marginTop": -17.995999999999995,
                      "paddingTop": 17.995999999999995,
                    },
                  ]
                }
              >
                ALL CAUGHT UP
              </Text>
              <Text
                allowFontScaling={false}
                onLayout={[Function]}
                onTextLayout={[Function]}
                style={
                  [
                    {
                      "color": "#a9a3c0",
                      "fontFamily": "Geist-500",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "letterSpacing": 0,
                      "lineHeight": 19.599999999999998,
                    },
                    {
                      "paddingHorizontal": 24,
                      "textAlign": "center",
                    },
                    {
                      "marginTop": -0.3780000000000019,
                      "paddingTop": 0.3780000000000019,
                    },
                  ]
                }
              >
                Nothing needs you right now. Tokek will wake you when something does.
              </Text>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`inbox shows the needs-you card above the quiet EARLIER list 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
            "overflow": "hidden",
          },
          {
            "backgroundColor": "#17142a",
          },
          undefined,
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
      testID="inbox-screen"
    >
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "paddingBottom": 0,
              "paddingTop": 47,
            },
            {
              "transform": [
                {
                  "translateY": 0,
                },
              ],
            },
          ]
        }
      >
        <RCTScrollView
          contentContainerStyle={
            {
              "gap": 16,
              "paddingBottom": 32,
              "paddingHorizontal": 20,
            }
          }
        >
          <View>
            <View
              style={
                [
                  {
                    "flexDirection": "row",
                    "flexWrap": "nowrap",
                  },
                  {
                    "alignItems": "center",
                    "justifyContent": "space-between",
                  },
                  {
                    "paddingTop": 8,
                  },
                ]
              }
            >
              <Text
                accessibilityRole="header"
                allowFontScaling={false}
                onLayout={[Function]}
                onTextLayout={[Function]}
                style={
                  [
                    {
                      "color": "#f4efe4",
                      "fontFamily": "Archivo-W66-900",
                      "fontSize": 64,
                      "fontStyle": "normal",
                      "letterSpacing": -0.64,
                      "lineHeight": 55.04,
                    },
                    undefined,
                    {
                      "marginTop": -26.175999999999995,
                      "paddingTop": 26.175999999999995,
                    },
                  ]
                }
              >
                INBOX
              </Text>
              <View
                accessibilityActions={
                  [
                    {
                      "label": "MARK ALL READ",
                      "name": "activate",
                    },
                  ]
                }
                accessibilityLabel="MARK ALL READ"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                onAccessibilityAction={[Function]}
                style={
                  [
                    {
                      "minHeight": 44,
                      "minWidth": 44,
                    },
                    {
                      "alignItems": "flex-start",
                      "justifyContent": "center",
                    },
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  ]
                }
                testID="inbox-mark-all-read"
              >
                <View
                  style={
                    [
                      {
                        "borderRadius": 16,
                        "justifyContent": "center",
                        "minHeight": 32,
                        "paddingHorizontal": 14,
                      },
                      {
                        "borderColor": "#5b5487",
                        "borderWidth": 1.5,
                      },
                    ]
                  }
                >
                  <Text
                    allowFontScaling={false}
                    onLayout={[Function]}
                    onTextLayout={[Function]}
                    style={
                      [
                        {
                          "color": "#a9a3c0",
                          "fontFamily": "Archivo-W100-800",
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "letterSpacing": 0.84,
                          "lineHeight": 12.04,
                        },
                        undefined,
                        {
                          "marginTop": -5.725999999999999,
                          "paddingTop": 5.725999999999999,
                        },
                      ]
                    }
                  >
                    MARK ALL READ
                  </Text>
                </View>
              </View>
            </View>
            <View
              accessibilityLabel="Show"
              accessibilityRole="radiogroup"
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#2c2750",
                  "borderRadius": 22,
                  "flexDirection": "row",
                  "gap": 4,
                  "padding": 4,
                }
              }
              testID="inbox-filters"
            >
              <View
                accessibilityActions={
                  [
                    {
                      "label": "ALL",
                      "name": "activate",
                    },
                  ]
                }
                accessibilityLabel="ALL"
                accessibilityRole="radio"
                accessibilityState={
                  {
                    "checked": false,
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                onAccessibilityAction={[Function]}
                style={
                  [
                    {
                      "minHeight": 44,
                      "minWidth": 44,
                    },
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 22,
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 4,
                        "justifyContent": "center",
                        "paddingHorizontal": 8,
                      },
                      null,
                    ],
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  onLayout={[Function]}
                  onTextLayout={[Function]}
                  style={
                    [
                      {
                        "color": "#a9a3c0",
                        "fontFamily": "Geist-800",
                        "fontSize": 11,
                        "fontStyle": "normal",
                        "letterSpacing": 0.88,
                        "lineHeight": 15.399999999999999,
                      },
                      undefined,
                      {
                        "marginTop": -0.2970000000000015,
                        "paddingTop": 0.2970000000000015,
                      },
                    ]
                  }
                >
                  ALL
                </Text>
              </View>
              <View
                accessibilityActions={
                  [
                    {
                      "label": "NEEDS YOU · 1",
                      "name": "activate",
                    },
                  ]
                }
                accessibilityLabel="NEEDS YOU · 1"
                accessibilityRole="radio"
                accessibilityState={
                  {
                    "checked": true,
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                onAccessibilityAction={[Function]}
                style={
                  [
                    {
                      "minHeight": 44,
                      "minWidth": 44,
                    },
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 22,
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 4,
                        "justifyContent": "center",
                        "paddingHorizontal": 8,
                      },
                      {
                        "backgroundColor": "#ffd84a",
                      },
                    ],
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  onLayout={[Function]}
                  onTextLayout={[Function]}
                  style={
                    [
                      {
                        "color": "#17142a",
                        "fontFamily": "Geist-800",
                        "fontSize": 11,
                        "fontStyle": "normal",
                        "letterSpacing": 0.88,
                        "lineHeight": 15.399999999999999,
                      },
                      undefined,
                      {
                        "marginTop": -0.2970000000000015,
                        "paddingTop": 0.2970000000000015,
                      },
                    ]
                  }
                >
                  NEEDS YOU · 1
                </Text>
              </View>
              <View
                accessibilityActions={
                  [
                    {
                      "label": "CREW",
                      "name": "activate",
                    },
                  ]
                }
                accessibilityLabel="CREW"
                accessibilityRole="radio"
                accessibilityState={
                  {
                    "checked": false,
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                onAccessibilityAction={[Function]}
                style={
                  [
                    {
                      "minHeight": 44,
                      "minWidth": 44,
                    },
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 22,
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 4,
                        "justifyContent": "center",
                        "paddingHorizontal": 8,
                      },
                      null,
                    ],
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  onLayout={[Function]}
                  onTextLayout={[Function]}
                  style={
                    [
                      {
                        "color": "#a9a3c0",
                        "fontFamily": "Geist-800",
                        "fontSize": 11,
                        "fontStyle": "normal",
                        "letterSpacing": 0.88,
                        "lineHeight": 15.399999999999999,
                      },
                      undefined,
                      {
                        "marginTop": -0.2970000000000015,
                        "paddingTop": 0.2970000000000015,
                      },
                    ]
                  }
                >
                  CREW
                </Text>
              </View>
              <View
                accessibilityActions={
                  [
                    {
                      "label": "GUIDES",
                      "name": "activate",
                    },
                  ]
                }
                accessibilityLabel="GUIDES"
                accessibilityRole="radio"
                accessibilityState={
                  {
                    "checked": false,
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                onAccessibilityAction={[Function]}
                style={
                  [
                    {
                      "minHeight": 44,
                      "minWidth": 44,
                    },
                    [
                      {
                        "alignItems": "center",
                        "borderRadius": 22,
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 4,
                        "justifyContent": "center",
                        "paddingHorizontal": 8,
                      },
                      null,
                    ],
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  onLayout={[Function]}
                  onTextLayout={[Function]}
                  style={
                    [
                      {
                        "color": "#a9a3c0",
                        "fontFamily": "Geist-800",
                        "fontSize": 11,
                        "fontStyle": "normal",
                        "letterSpacing": 0.88,
                        "lineHeight": 15.399999999999999,
                      },
                      undefined,
                      {
                        "marginTop": -0.2970000000000015,
                        "paddingTop": 0.2970000000000015,
                      },
                    ]
                  }
                >
                  GUIDES
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "flexDirection": "column",
                  },
                  {
                    "gap": 12,
                  },
                  undefined,
                ]
              }
            >
              <View
                accessibilityElementsHidden={false}
                importantForAccessibility="auto"
                testID="inbox-card-0192f000-0000-7000-9000-000000000001"
              >
                <View
                  onLayout={[Function]}
                >
                  <View
                    style={
                      {
                        "opacity": 1,
                        "transform": [
                          {
                            "translateX": 0,
                          },
                          {
                            "rotate": "0deg",
                          },
                        ],
                      }
                    }
                  >
                    <View
                      style={
                        [
                          {
                            "overflow": "hidden",
                            "padding": 16,
                          },
                          {
                            "backgroundColor": "#1f1b38",
                            "borderRadius": 20,
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "flexDirection": "column",
                            },
                            {
                              "gap": 12,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            [
                              {
                                "flexDirection": "row",
                                "flexWrap": "nowrap",
                              },
                              {
                                "alignItems": "center",
                                "gap": 12,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "borderRadius": 14,
                                  "height": 40,
                                  "justifyContent": "center",
                                  "width": 40,
                                },
                                {
                                  "backgroundColor": "#ff9a4d",
                                },
                              ]
                            }
                          >
                            <View
                              accessibilityElementsHidden={true}
                              accessible={false}
                              importantForAccessibility="no-hide-descendants"
                              pointerEvents="none"
                              style={
                                [
                                  {
                                    "height": 26,
                                    "width": 26,
                                  },
                                  undefined,
                                ]
                              }
                            >
                              <View
                                accessible={false}
                                skiaProps={
                                  {
                                    "style": {
                                      "height": 26,
                                      "width": 26,
                                    },
                                  }
                                }
                                testID="skia-canvas"
                              >
                                <View
                                  accessible={false}
                                  skiaProps={
                                    {
                                      "transform": [
                                        {
                                          "scale": 0.26,
                                        },
                                      ],
                                    }
                                  }
                                  testID="skia-group"
                                >
                                  <View
                                    accessible={false}
                                    skiaProps={
                                      {
                                        "color": "#17142a",
                                        "opacity": 1,
                                        "path": "M11.1 31.1L13.9 29.9L16.1 29.2L18.7 28.7L21.6 28.4L25.9 28.2L39.4 28.4L59.8 27.7L67.7 28.1L83.4 30.1L89.9 30.5L92.2 31.1L93.6 31.6L94.3 32.1L94.6 32.8L94.4 33.5L93.3 35.5L88.5 41L87.4 42.8L83.4 45.1L82.2 46L81.1 47.5L80.4 49.7L80.9 52.1L81.9 53.7L83.1 54.7L86.7 57.1L88.6 60.1L92.3 64.6L92.9 65.6L93.4 67L93.1 67.5L92.5 67.9L91.2 68.4L88.9 68.9L85.9 68.9L82.6 69.2L70.2 71.4L64 72.1L57.6 72.3L42.9 72.1L24.2 72.2L19.9 71.8L15.3 71L8.4 68.7L7.2 68.1L6.8 67.6L7.2 66.2L10.9 60.1L11.6 58.8L12.6 56.1L16.7 52.6L17.6 51.3L18.1 49.6L17.8 47.8L17 46.4L13.8 43L13.2 42L12.6 40L11.8 38.6L7.2 32.2L6.9 32.2L7.3 31.8L8.4 31.1L10.7 30.5L9.4 25.1L6.7 25.6L4.2 26.5L2.2 27.9L0.8 29.9L0.3 32.3L0.5 34.4L1.2 36.3L3 39.4L6 43.4L7 45.4L8.2 46.8L10.6 48.7L12.8 50L13.1 49.3L8.9 53.1L7.9 54.4L6.9 56.4L3.6 60.5L1.6 63.5L0.9 65.3L0.6 67.3L1 69.6L2.2 71.7L4.1 73.2L6.5 74.2L9.3 74.8L20.7 75L35 76.1L42.9 76.4L64.2 75.4L69.2 75.4L79.4 75.8L83.3 75.7L88.2 74.9L92.9 73.5L95.2 72.4L96.9 70.9L98 69L98.2 66.9L97.9 65.1L96.4 61.9L93.1 56.9L92.2 54.1L91.3 52.5L90.3 51.3L87.6 48.8L87.9 50.1L87.5 51.1L90.4 48.5L91.5 47.3L92.4 45.7L93.5 42.8L96.8 37.8L98.3 34.7L98.6 33L98.4 31.1L97.4 29.4L95.7 28L93.6 27L88.1 25.7L83.8 25.1L62.6 25L44.8 23.7L39.4 23.5L32.9 23.6L19.3 24.5L9.6 24.3Z",
                                      }
                                    }
                                    testID="skia-path"
                                  />
                                  <View
                                    accessible={false}
                                    skiaProps={
                                      {
                                        "color": "#17142a",
                                        "opacity": 1,
                                        "path": "M61.2 34.2L60.4 34.8L60 35.8L59.7 36.9L59.8 39.3L60.2 40.4L60.6 41.3L61.4 41.9L63.5 41.9L64.2 41.3L64.7 40.4L65.1 38L64.8 35.7L64.3 34.8L63.5 34.1Z",
                                      }
                                    }
                                    testID="skia-path"
                                  />
                                  <View
                                    accessible={false}
                                    skiaProps={
                                      {
                                        "color": "#17142a",
                                        "opacity": 1,
                                        "path": "M61.3 48L60.3 48.7L59.9 49.7L59.8 50.9L60 52.1L60.5 53.1L61.4 53.8L63.5 53.8L64.4 53.1L64.9 52.1L65.1 50.9L65 49.7L64.6 48.7L63.6 48Z",
                                      }
                                    }
                                    testID="skia-path"
                                  />
                                  <View
                                    accessible={false}
                                    skiaProps={
                                      {
                                        "color": "#17142a",
                                        "opacity": 1,
                                        "path": "M61.4 59.7L61 60.5L60.7 61.5L60.8 64L61.1 65.1L61.4 65.8L63.4 65.8L64.1 64L64.2 62.7L63.8 60.4L63.4 59.7Z",
                                      }
                                    }
                                    testID="skia-path"
                                  />
                                </View>
                              </View>
                            </View>
                          </View>
                          <View
                            style={
                              [
                                {
                                  "flexDirection": "column",
                                },
                                {
                                  "flex": 1,
                                  "gap": 4,
                                },
                                undefined,
                              ]
                            }
                          >
                            <Text
                              allowFontScaling={false}
                              onLayout={[Function]}
                              onTextLayout={[Function]}
                              style={
                                [
                                  {
                                    "color": "#f4efe4",
                                    "fontFamily": "Archivo-W78-900",
                                    "fontSize": 16,
                                    "fontStyle": "normal",
                                    "letterSpacing": 0.32,
                                    "lineHeight": 13.76,
                                  },
                                  undefined,
                                  {
                                    "marginTop": -6.543999999999999,
                                    "paddingTop": 6.543999999999999,
                                  },
                                ]
                              }
                            >
                              MAYA NUDGED YOU
                            </Text>
                            <Text
                              allowFontScaling={false}
                              onLayout={[Function]}
                              onTextLayout={[Function]}
                              style={
                                [
                                  {
                                    "color": "#a9a3c0",
                                    "fontFamily": "Geist-500",
                                    "fontSize": 12.5,
                                    "fontStyle": "normal",
                                    "letterSpacing": 0,
                                    "lineHeight": 16.875,
                                  },
                                  undefined,
                                  {
                                    "marginTop": -0.6500000000000006,
                                    "paddingTop": 0.6500000000000006,
                                  },
                                ]
                              }
                            >
                              The crew is waiting on your vote.
                            </Text>
                          </View>
                        </View>
                        <View
                          style={
                            [
                              {
                                "flexDirection": "row",
                                "flexWrap": "wrap",
                              },
                              {
                                "alignItems": "center",
                                "gap": 8,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            accessibilityActions={
                              [
                                {
                                  "label": "Take a look",
                                  "name": "activate",
                                },
                              ]
                            }
                            accessibilityLabel="Take a look"
                            accessibilityRole="button"
                            accessibilityState={
                              {
                                "disabled": false,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            onAccessibilityAction={[Function]}
                            style={
                              [
                                {
                                  "minHeight": 44,
                                  "minWidth": 44,
                                },
                                {
                                  "alignItems": "flex-start",
                                  "justifyContent": "center",
                                },
                                {
                                  "transform": [
                                    {
                                      "scale": 1,
                                    },
                                  ],
                                },
                              ]
                            }
                            testID="inbox-action-0192f000-0000-7000-9000-000000000001-open"
                          >
                            <View
                              style={
                                [
                                  {
                                    "borderRadius": 16,
                                    "justifyContent": "center",
                                    "minHeight": 32,
                                    "paddingHorizontal": 14,
                                  },
                                  {
                                    "backgroundColor": "#ff9a4d",
                                  },
                                ]
                              }
                            >
                              <Text
                                allowFontScaling={false}
                                onLayout={[Function]}
                                onTextLayout={[Function]}
                                style={
                                  [
                                    {
                                      "color": "#17142a",
                                      "fontFamily": "Archivo-W100-800",
                                      "fontSize": 14,
                                      "fontStyle": "normal",
                                      "letterSpacing": 0.84,
                                      "lineHeight": 12.04,
                                    },
                                    undefined,
                                    {
                                      "marginTop": -5.725999999999999,
                                      "paddingTop": 5.725999999999999,
                                    },
                                  ]
                                }
                              >
                                TAKE A LOOK
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View>
              <Text
                allowFontScaling={false}
                onLayout={[Function]}
                onTextLayout={[Function]}
                style={
                  [
                    {
                      "color": "#a9a3c0",
                      "fontFamily": "Geist-700",
                      "fontSize": 11,
                      "fontStyle": "normal",
                      "letterSpacing": 1.76,
                      "lineHeight": 15.399999999999999,
                    },
                    undefined,
                    {
                      "marginTop": -0.2970000000000015,
                      "paddingTop": 0.2970000000000015,
                    },
                  ]
                }
              >
                EARLIER
              </Text>
              <View
                accessibilityLabel="Jordan joined The Bali Six"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "borderBottomColor": "rgba(255,255,255,.07)",
                    "borderBottomWidth": 1,
                    "flexDirection": "row",
                    "gap": 12,
                    "minHeight": 52,
                  }
                }
                testID="inbox-row-0192f000-0000-7000-9000-000000000002"
              >
                <View>
                  <View
                    accessibilityElementsHidden={true}
                    importantForAccessibility="no-hide-descendants"
                    style={
                      [
                        {
                          "borderRadius": 32,
                          "padding": 0,
                        },
                        null,
                        null,
                      ]
                    }
                  >
                    <View
                      style={
                        [
                          {
                            "alignItems": "center",
                            "justifyContent": "center",
                            "overflow": "hidden",
                          },
                          {
                            "backgroundColor": "#4f86ff",
                            "borderColor": "#17142a",
                            "borderRadius": 32,
                            "borderWidth": 2,
                            "height": 36,
                            "opacity": 1,
                            "width": 36,
                          },
                        ]
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        onLayout={[Function]}
                        onTextLayout={[Function]}
                        style={
                          [
                            {
                              "color": "#17142a",
                              "fontFamily": "Archivo-W78-900",
                              "fontSize": 16,
                              "fontStyle": "normal",
                              "letterSpacing": 0.32,
                              "lineHeight": 13.76,
                            },
                            undefined,
                            {
                              "marginTop": -6.543999999999999,
                              "paddingTop": 6.543999999999999,
                            },
                          ]
                        }
                      >
                        J
                      </Text>
                    </View>
                  </View>
                </View>
                <Text
                  allowFontScaling={false}
                  numberOfLines={2}
                  onLayout={[Function]}
                  onTextLayout={[Function]}
                  style={
                    [
                      {
                        "color": "#f4efe4",
                        "fontFamily": "Geist-500",
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "letterSpacing": 0,
                        "lineHeight": 19.599999999999998,
                      },
                      {
                        "flex": 1,
                      },
                      {
                        "marginTop": -0.3780000000000019,
                        "paddingTop": 0.3780000000000019,
                      },
                    ]
                  }
                >
                  Jordan joined The Bali Six
                </Text>
                <Text
                  allowFontScaling={false}
                  onLayout={[Function]}
                  onTextLayout={[Function]}
                  style={
                    [
                      {
                        "color": "#a9a3c0",
                        "fontFamily": "Geist-500",
                        "fontSize": 11.5,
                        "fontStyle": "normal",
                        "letterSpacing": 0,
                        "lineHeight": 16.099999999999998,
                      },
                      undefined,
                      {
                        "marginTop": -0.31050000000000155,
                        "paddingTop": 0.31050000000000155,
                      },
                    ]
                  }
                >
                  2h
                </Text>
              </View>
              <View
                accessibilityLabel="Tokek moved Rin's pickup to 22:40"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "borderBottomColor": "rgba(255,255,255,.07)",
                    "borderBottomWidth": 1,
                    "flexDirection": "row",
                    "gap": 12,
                    "minHeight": 52,
                  }
                }
                testID="inbox-row-0192f000-0000-7000-9000-000000000003"
              >
                <View>
                  <View
                    accessibilityLabel="Tokek"
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                  />
                </View>
                <Text
                  allowFontScaling={false}
                  numberOfLines={2}
                  onLayout={[Function]}
                  onTextLayout={[Function]}
                  style={
                    [
                      {
                        "color": "#f4efe4",
                        "fontFamily": "Geist-500",
                        "fontSize": 14,
                        "fontStyle": "normal",
                        "letterSpacing": 0,
                        "lineHeight": 19.599999999999998,
                      },
                      {
                        "flex": 1,
                      },
                      {
                        "marginTop": -0.3780000000000019,
                        "paddingTop": 0.3780000000000019,
                      },
                    ]
                  }
                >
                  Tokek moved Rin's pickup to 22:40
                </Text>
                <View
                  accessibilityLabel="Undo: Tokek moved Rin's pickup to 22:40"
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "justifyContent": "center",
                      "minHeight": 44,
                      "paddingHorizontal": 4,
                    }
                  }
                  testID="inbox-undo-0192f000-0000-7000-9000-000000000003"
                >
                  <Text
                    allowFontScaling={false}
                    onLayout={[Function]}
                    onTextLayout={[Function]}
                    style={
                      [
                        {
                          "color": "#ffd84a",
                          "fontFamily": "Geist-800",
                          "fontSize": 11,
                          "fontStyle": "normal",
                          "letterSpacing": 0.88,
                          "lineHeight": 15.399999999999999,
                        },
                        undefined,
                        {
                          "marginTop": -0.2970000000000015,
                          "paddingTop": 0.2970000000000015,
                        },
                      ]
                    }
                  >
                    UNDO
                  </Text>
                </View>
                <Text
                  allowFontScaling={false}
                  onLayout={[Function]}
                  onTextLayout={[Function]}
                  style={
                    [
                      {
                        "color": "#a9a3c0",
                        "fontFamily": "Geist-500",
                        "fontSize": 11.5,
                        "fontStyle": "normal",
                        "letterSpacing": 0,
                        "lineHeight": 16.099999999999998,
                      },
                      undefined,
                      {
                        "marginTop": -0.31050000000000155,
                        "paddingTop": 0.31050000000000155,
                      },
                    ]
                  }
                >
                  3h
                </Text>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
